src/test/deca/context/valid/class/17-exemplePoly.deca
/* Description:
    un exemple de programme deca fournie dans le poly

    Historique:
      cree le 20/01/2020
    Sortie attendu:
     decac ne doit afficher rien
*/

class A {
    protected int x;
    int getX(){
        return x;
      }
    void setX(int x){
      this.x = x;
    }
  }
{
    A a = new A();
    a.setX(1);
    println("a.getX() = ", a.getX());
}
